--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,13 +99,13 @@ select = [
        "LOG",     # flake8-logging
        "G",       # flake8-logging-format
        "INP",     # flake8-no-pep420
-       "PIE",     # flake8-pie
-       "PYI",     # flake8-pyi
-       "PT",      # flake8-pytest-style
+       # "PIE",     # flake8-pie
+       # "PYI",     # flake8-pyi
+       # "PT",      # flake8-pytest-style : good stuff, worth its own PR
        # "Q",       # flake8-quotes : 50-60 fixes if we prefer single. Fine, but do it in a new PR.
        "RSE",     # flake8-raise
-       "RET",     # flake8-return
-       "SLF",     # flake8-self
+       # "RET",     # flake8-return
+       # "SLF",     # flake8-self
        "F401",    # unused-import
        # "F821",    # undefined-name   # This is useful for missing imports, but currently catches a few other things
        "W291",    # trailing-whitespace
