Improve ruff select comments

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -106,9 +106,9 @@ select = [
        # "Q",       # flake8-quotes : 50-60 fixes if we prefer single. Fine, but do it in a new PR.
        "RSE",     # flake8-raise
        "RET",     # flake8-return
-       # "SLF",     # flake8-self
+       # "SLF",     # flake8-self : would be good to take a closer look at some of this private attribute access
        "F401",    # unused-import
-       # "F821",    # undefined-name   # This is useful for missing imports, but currently catches a few other things
+       # "F821",    # undefined-name : This is useful for missing imports, but currently catches a few other things
        "W291",    # trailing-whitespace
        "W293",    # blank-line-with-whitespace
        "B006",    # mutable-argument-default
