--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,14 +71,44 @@ euphonic-powder-map = "euphonic.cli.powder_map:main"
 [tool.ruff]
 line-length = 79
 target-version = "py310"
+extend-exclude = ["doc/source/conf.py"]
 
 [tool.ruff.lint]
 preview = true
 explicit-preview-rules = true
 select = [
        "I",       # isort
+       "ERA001",  # Eradicate commented-out code
+       "YTT",     # Flake8-2020
+       # "ANN",   # Full type annotation, not realistic right now
+       "ASYNC",
+       "S",       # Security (flake8-bandit)
+       "BLE",     # flake8-blind-except
+       # "FBT",   # flake8-boolean-trap: don't use positional boolean arguments. Fixable, but API-breaking.
+       # "B",     # flake8-bugbear: Fixable but a bit involved
+       "A",       # flake8-builtins
+       # "COM",   # flake8-commas: Fixable but a big diff
+       # "C4",    # flake8-comprehensions: Good stuff, worth its own PR
+       "T10",     # flake8-debugger
+       # "EM",      # flake8-errmsg: Big diff, worth its own PR
+       "EXE",     # flake8-executable
+       "FIX",     # leftover FIXME, TODO etc. (flake8-fixme)
+       "FA",      # flake8-future-annotations
+       "INT",     # flake8-gettext
+       "ISC",     # flake8-implicit-str-concat
+       "ICN",     # flake8-import-conventions
+       "LOG",     # flake8-logging
+       "G",       # flake8-logging-format
+       "INP",     # flake8-no-pep420
+       # "PIE",     # flake8-pie
+       # "PYI",     # flake8-pyi
+       # "PT",      # flake8-pytest-style : good stuff, worth its own PR
+       # "Q",       # flake8-quotes : 50-60 fixes if we prefer single. Fine, but do it in a new PR.
+       "RSE",     # flake8-raise
+       "RET",     # flake8-return
+       # "SLF",     # flake8-self : would be good to take a closer look at some of this private attribute access
        "F401",    # unused-import
-       # "F821",    # undefined-name   # This is useful for missing imports, but currently catches a few other things
+       # "F821",    # undefined-name : This is useful for missing imports, but currently catches a few other things
        "W291",    # trailing-whitespace
        "W293",    # blank-line-with-whitespace
        "B006",    # mutable-argument-default
@@ -87,8 +117,15 @@ select = [
        "RET505",  # superfluous-else-return
        "RET506",  # superfluous-else-raise
 ]
+ignore = [
+       "S101",    # Use of except
+       "CPY001",  # Missing copyright notice at top of every file. Not for us.
+       "T20",     # flake8-print forbids use of print and pprint.
+       ]
+task-tags = ["Note"]  # Avoid false positives for ERA001 on lines like "# Note: CODE-LIKE-THINGS"
 
 [tool.ruff.lint.isort]
 force-sort-within-sections = true
 
-
+[tool.ruff.lint.flake8-quotes]
+inline-quotes = "single"
