--- a/pyproject.toml
+++ b/pyproject.toml
@@ -107,6 +107,12 @@ select = [
        "RSE",     # flake8-raise
        "RET",     # flake8-return
        # "SLF",     # flake8-self : would be good to take a closer look at some of this private attribute access
+       # "SIM",   # flake8-simplify : good stuff, worth its own PR
+       "SLOT",    # flake8-slots
+       "TID",     # flake8-tidy-imports
+       "TD",      # flake8-todos
+       "TC",      # flake8-type-checking
+       "ARG",
        "F401",    # unused-import
        # "F821",    # undefined-name : This is useful for missing imports, but currently catches a few other things
        "W291",    # trailing-whitespace
@@ -133,3 +139,6 @@ inline-quotes = "single"
 
 [tool.ruff.lint.isort]
 force-sort-within-sections = true
+
+[tool.ruff.lint.per-file-ignores]
+"tests_and_analysis/test/**/*" = ["ARG"]  # pytest fixtures can look like unused arguments
