--- a/pyproject.toml
+++ b/pyproject.toml
@@ -120,6 +120,11 @@ select = [
        "N",       # pep8-naming
        "PERF",    # Perflint
        "F401",    # unused-import
+       # "E",     # pycodestyle error: this is a lot of stuff
+       "W",       # pycodestyle warning
+       "DOC",     # pydoclint
+       # "D",     # 2000 errors, code sprint material?
+       "F",
        # "F821",    # undefined-name : This is useful for missing imports, but currently catches a few other things
        "W291",    # trailing-whitespace
        "W293",    # blank-line-with-whitespace
