--- a/pyproject.toml
+++ b/pyproject.toml
@@ -125,20 +125,24 @@ select = [
        "DOC",     # pydoclint
        # "D",     # 2000 errors, code sprint material?
        "F",
-       # "F821",    # undefined-name : This is useful for missing imports, but currently catches a few other things
-       "W291",    # trailing-whitespace
-       "W293",    # blank-line-with-whitespace
-       "B006",    # mutable-argument-default
+       "PGH",     # pygrep-hooks
+       "PLC",     # pylint convention
+       "PLE",     # pylint error
+       # "PLR",   # pylint refactor; 71 errors, own PR needed
        "PLR0203", # no-staticmethod-decorator
        "PLR5501", # collapsible-else-if
-       "RET505",  # superfluous-else-return
-       "RET506",  # superfluous-else-raise
+       "PLW",     # pylint warning
+       # "UP",    # pyupgrade; lots of type hints to update
+       "FURB",    # refurb
+       # "RUF",   # Very reasonable changes but a few of them
+       # "TRY",   # tryceratops : quite a bit (maybe unnecessary) change in approach
 ]
 ignore = [
        "S101",    # Use of except
        "CPY001",  # Missing copyright notice at top of every file. Not for us.
        "T20",     # flake8-print forbids use of print and pprint.
        "PERF203", # No try-except in loop. Micro-optimisation, not relevant for Py 3.11+
+       "PLE1300", # Pint introduces format character P, ruff doesn't recognise it
        ]
 task-tags = ["Note"]  # Avoid false positives for ERA001 on lines like "# Note: CODE-LIKE-THINGS"
 
