Pyupgrade: ruff auto fixes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -132,7 +132,7 @@ select = [
        "PLR0203", # no-staticmethod-decorator
        "PLR5501", # collapsible-else-if
        "PLW",     # pylint warning
-       # "UP",    # pyupgrade; lots of type hints to update
+       "UP",      # pyupgrade
        "FURB",    # refurb
        # "RUF",   # Very reasonable changes but a few of them
        # "TRY",   # tryceratops : quite a bit (maybe unnecessary) change in approach
