Exempt tests from RUF012
This rule is supposed to encourage you to use immutable types for
class variables, and put mutable stuff in __init__... or at least use
a ClassVar annotation to indicate that instance methods should stay
away.

But in pytests it is often useful to create a big block of dicts and
lists for test parametrisation, and it is clearest to do it just above
the test definition. So this practice just gets in the way, for little
benefit.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -160,4 +160,7 @@ force-sort-within-sections = true
 extend-ignore-names = ["k_B", "H_ab"]
 
 [tool.ruff.lint.per-file-ignores]
-"tests_and_analysis/test/**/*" = ["ARG"]  # pytest fixtures can look like unused arguments
+"tests_and_analysis/test/**/*" = [
+    "ARG",    # pytest fixtures can look like unused arguments
+    "RUF012", # declaring sample data inside test classes is tidy
+    ]
