--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,7 +87,7 @@ select = [
        "B",     # flake8-bugbear: Fixable but a bit involved
        "A",       # flake8-builtins
        # "COM",   # flake8-commas: Fixable but a big diff
-       # "C4",    # flake8-comprehensions: Good stuff, worth its own PR
+       "C4",    # flake8-comprehensions: Good stuff, worth its own PR
        "T10",     # flake8-debugger
        # "EM",      # flake8-errmsg: Big diff, worth its own PR
        "EXE",     # flake8-executable
@@ -134,7 +134,7 @@ select = [
        "PLW",     # pylint warning
        "UP",      # pyupgrade
        "FURB",    # refurb
-       # "RUF",   # Very reasonable changes but a few of them
+       "RUF",   # Very reasonable changes but a few of them
        # "TRY",   # tryceratops : quite a bit (maybe unnecessary) change in approach
 ]
 ignore = [
@@ -160,4 +160,7 @@ force-sort-within-sections = true
 extend-ignore-names = ["k_B", "H_ab"]
 
 [tool.ruff.lint.per-file-ignores]
-"tests_and_analysis/test/**/*" = ["ARG"]  # pytest fixtures can look like unused arguments
+"tests_and_analysis/test/**/*" = [
+    "ARG",    # pytest fixtures can look like unused arguments
+    "RUF012", # declaring sample data inside test classes is tidy
+    ]
