--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,10 +84,10 @@ select = [
        "S",       # Security (flake8-bandit)
        "BLE",     # flake8-blind-except
        # "FBT",   # flake8-boolean-trap: don't use positional boolean arguments. Fixable, but API-breaking.
-       "B",     # flake8-bugbear: Fixable but a bit involved
+       "B",       # flake8-bugbear: Fixable but a bit involved
        "A",       # flake8-builtins
-       # "COM",   # flake8-commas: Fixable but a big diff
-       "C4",    # flake8-comprehensions: Good stuff, worth its own PR
+       "COM",     # flake8-commas
+       "C4",      # flake8-comprehensions: Good stuff, worth its own PR
        "T10",     # flake8-debugger
        # "EM",      # flake8-errmsg: Big diff, worth its own PR
        "EXE",     # flake8-executable
