flake8-pie, flake8-simplify (#398)
* flake8-pie

* flake8-simplify

* Apply suggestions from code review

* Fix intensity-map CLI input check

Type comparison was "simplified" to isinstance: this doesn't give the
correct discrimination between QpointFrequencies and
QpointPhononModes, because QpointPhononModes is a subclass of
QpointFrequencies.

Make the check more specific.

* Test error with a more specific check

These are both TypeError, which allowed the wrong logic to pass the
second test.

* Update CHANGELOG

---------

Co-authored-by: Jacob Wilkins <46597752+oerc0122@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,14 +99,14 @@ select = [
        "LOG",     # flake8-logging
        "G",       # flake8-logging-format
        "INP",     # flake8-no-pep420
-       # "PIE",     # flake8-pie
-       # "PYI",     # flake8-pyi
+       "PIE",     # flake8-pie
+       # "PYI",     # flake8-pyi : requires typing_extensions or python3.11
        # "PT",      # flake8-pytest-style : good stuff, worth its own PR
        # "Q",       # flake8-quotes : 50-60 fixes if we prefer single. Fine, but do it in a new PR.
        "RSE",     # flake8-raise
        "RET",     # flake8-return
        # "SLF",     # flake8-self : would be good to take a closer look at some of this private attribute access
-       # "SIM",   # flake8-simplify : good stuff, worth its own PR
+       "SIM",   # flake8-simplify : good stuff, worth its own PR
        "SLOT",    # flake8-slots
        "TID",     # flake8-tidy-imports
        "TD",      # flake8-todos
