Linting: pycodestyle-error
It is tempting to use a larger line-width, but as most of the source
code is written to 79 characters:

- For now make an exception for the build scripts and tests that use a
  slightly wider standard

- When increasing the allowed line-width we should use a formatter to
  unpack the whole codebase a bit; otherwise there will be
  inconsistency within the files.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -129,7 +129,7 @@ select = [
        "N",       # pep8-naming
        "PERF",    # Perflint
        "F401",    # unused-import
-       # "E",     # pycodestyle error: this is a lot of stuff
+       "E",       # pycodestyle error
        "W",       # pycodestyle warning
        "DOC",     # pydoclint
        # "D",     # 2000 errors, code sprint material?
@@ -169,8 +169,11 @@ force-sort-within-sections = true
 extend-ignore-names = ["k_B", "H_ab"]
 
 [tool.ruff.lint.per-file-ignores]
+"build_utils/*" = ["E501"]  # Long lines
 "tests_and_analysis/test/**/*" = [
     "ARG",    # pytest fixtures can look like unused arguments
     "RUF012", # declaring sample data inside test classes is tidy
+    "E501",   # long lines seem more common with verbose test names
     ]
+
 "euphonic/version.py" = ["Q000"]  # Source build prefers double quotes here
