--- a/pyproject.toml
+++ b/pyproject.toml
@@ -143,8 +143,8 @@ select = [
        "PLW",     # pylint warning
        "UP",      # pyupgrade
        "FURB",    # refurb
-       "RUF",   # Very reasonable changes but a few of them
-       # "TRY",   # tryceratops : quite a bit (maybe unnecessary) change in approach
+       "RUF",     # Ruff-specific rules
+       "TRY",     # tryceratops
 ]
 ignore = [
        "S101",    # Use of except
