--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 requires = tox>=4
 # The python environments to run the tests in
-envlist = py310,py311,py312,py310-{base,matplotlib,phonopy-reader,brille,all,minrequirements-linux,minrequirements-mac,no-c}
+envlist = py310,py311,py312,py313,py314,py310-{base,matplotlib,phonopy-reader,brille,all,minrequirements-linux,minrequirements-mac,no-c}
 allowlist_externals = git
 
 [testenv]
@@ -26,6 +26,14 @@ extras =
     phonopy-reader
     brille
 commands = {[testenv]test_command} {posargs}
+
+[testenv:{py313,py314}]
+extras =
+    {[testenv]extras}
+    matplotlib
+    phonopy-reader
+commands = {[testenv]test_command} {posargs} -m "not brille"
+
 
 # Test with no extras
 [testenv:py310-base]
