--- a/build_utils/conda_release_test_requirements.yml
+++ b/build_utils/conda_release_test_requirements.yml
@@ -4,7 +4,7 @@ dependencies:
   - pytest=7.*
   - coverage
   - pytest-mock
-  - pytest-lazy-fixture
+  - pytest-lazy-fixtures
   - pytest-xvfb
   - python-slugify
   - matplotlib-base
