Python 3.14 just on Ubuntu, install HDF5 dependency

--- a/.github/workflows/test_checkout_one_os.yml
+++ b/.github/workflows/test_checkout_one_os.yml
@@ -36,7 +36,6 @@ jobs:
         3.11
         3.12
         3.13
-        3.14
       TOX_SKIP_ENV: ${{ inputs.all-python-versions && 'no-match' || '.*?(py311).*?' }}
     steps:
       - uses: actions/checkout@v4
@@ -47,7 +46,19 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ inputs.all-python-versions && env.ALL_PYTHON_VERSIONS || env.MIN_MAX_PYTHON_VERSIONS}}
+
+      - name: Setup Python 3.14
+        if: startsWith( inputs.os, 'ubuntu')
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.14
           allow-prereleases: true
+
+      - name: Install HDF5 on Ubuntu
+        if: startsWith( inputs.os, 'ubuntu')
+        shell: bash -l {0}
+        run: |
+          sudo apt install libhdf5-dev
 
       - name: Install llvm on MacOS
         if: startsWith( inputs.os , 'macos' )
