Test pre-release python as workflow-call option

--- a/.github/workflows/test_checkout_one_os.yml
+++ b/.github/workflows/test_checkout_one_os.yml
@@ -13,7 +13,12 @@ on:
         default: ubuntu-latest
         type: string
       all-python-versions:
-        description: 'Test all Python versions'
+        description: 'Test all supported Python versions'
+        required: false
+        default: false
+        type: boolean
+      python-prerelease:
+        description: 'Test Python prerelease version'
         required: false
         default: false
         type: boolean
@@ -36,6 +41,7 @@ jobs:
         3.11
         3.12
         3.13
+      PYTHON_PRERELEASE: 3.14
       TOX_SKIP_ENV: ${{ inputs.all-python-versions && 'no-match' || '.*?(py311).*?' }}
     steps:
       - uses: actions/checkout@v4
@@ -43,19 +49,20 @@ jobs:
           fetch-depth: 0 # Ensure tags are fetched for versioning
           fetch-tags: true
       - name: Setup Python
+        if: ! inputs.python-prerelease
         uses: actions/setup-python@v5
         with:
           python-version: ${{ inputs.all-python-versions && env.ALL_PYTHON_VERSIONS || env.MIN_MAX_PYTHON_VERSIONS}}
 
-      - name: Setup Python 3.14
-        if: startsWith( inputs.os, 'ubuntu')
+      - name: Setup pre-release Python
+        if: inputs.python-prerelease
         uses: actions/setup-python@v5
         with:
-          python-version: 3.14
+          python-version: ${{ env.PYTHON_PRERELEASE }}
           allow-prereleases: true
 
       - name: Install HDF5 on Ubuntu
-        if: startsWith( inputs.os, 'ubuntu')
+        if: startsWith( inputs.os, 'ubuntu') && inputs.python-prerelease
         shell: bash -l {0}
         run: |
           sudo apt install libhdf5-dev
