Call prerelease test as separate step for non-PR triggers

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -54,6 +54,13 @@ jobs:
       coverage: ${{ matrix.config.coverage }}
     secrets: inherit
 
+  test-prerelease:
+    needs: lint
+    if: github.event_name != 'pull_request'
+    uses: ./.github/workflows/test_checkout_one_os.yml
+    with:
+      python-prerelease: true
+
   test-gcc14:
     needs: lint
     uses: ./.github/workflows/test_gcc14.yml
