--- a/.github/workflows/test_checkout_one_os.yml
+++ b/.github/workflows/test_checkout_one_os.yml
@@ -17,11 +17,6 @@ on:
         required: false
         default: false
         type: boolean
-      python-prerelease:
-        description: 'Test Python prerelease version'
-        required: false
-        default: false
-        type: boolean
       coverage:
         description: 'Publish coverage'
         required: false
@@ -41,7 +36,6 @@ jobs:
         3.11
         3.12
         3.13
-      PYTHON_PRERELEASE: 3.14
       TOX_SKIP_ENV: ${{ inputs.all-python-versions && 'no-match' || '.*?(py311).*?' }}
     steps:
       - uses: actions/checkout@v4
@@ -49,23 +43,9 @@ jobs:
           fetch-depth: 0 # Ensure tags are fetched for versioning
           fetch-tags: true
       - name: Setup Python
-        if: ${{ ! inputs.python-prerelease }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ inputs.all-python-versions && env.ALL_PYTHON_VERSIONS || env.MIN_MAX_PYTHON_VERSIONS}}
-
-      - name: Setup pre-release Python
-        if: inputs.python-prerelease
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ env.PYTHON_PRERELEASE }}
-          allow-prereleases: true
-
-      - name: Install HDF5 on Ubuntu
-        if: startsWith( inputs.os, 'ubuntu') && inputs.python-prerelease
-        shell: bash -l {0}
-        run: |
-          sudo apt install libhdf5-dev
 
       - name: Install llvm on MacOS
         if: startsWith( inputs.os , 'macos' )
@@ -111,7 +91,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: Unit test results ${{ inputs.os }} ${{ inputs.python-prerelease && 'pre-release python' || '' }}
+          name: Unit test results ${{ inputs.os }}
           path: tests_and_analysis/test/reports/junit_report*.xml
 
       - name: Publish Codacy coverage
