Test all python versions with brille
Brille 0.8.1 adds builds for python 3.10-3.14 so we can test on CI

--- a/tox.ini
+++ b/tox.ini
@@ -19,21 +19,13 @@ install_command =
 extras =
     test
 
-[testenv:{py310,py311,py312}]
+[testenv:{py310,py311,py312,py313,py314}]
 extras =
     {[testenv]extras}
     matplotlib
     phonopy-reader
     brille
 commands = {[testenv]test_command} {posargs}
-
-[testenv:{py313,py314}]
-extras =
-    {[testenv]extras}
-    matplotlib
-    phonopy-reader
-commands = {[testenv]test_command} {posargs} -m "not brille"
-
 
 # Test with no extras
 [testenv:py310-base]
