Migrate CI macos-13 to macos-15-intel

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -39,7 +39,7 @@ jobs:
           skip: false
           all-python-versions: ${{(github.event_name != 'pull_request')}}
           coverage: false
-        - os: macos-13
+        - os: macos-15-intel
           skip: ${{ github.event_name == 'pull_request' }}
           all-python-versions: true
           coverage: false
