--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -18,13 +18,13 @@ jobs:
   build-wheels:
     strategy:
       matrix:
-        os: [windows-latest, macos-13, macos-latest, ubuntu-latest]
+        os: [windows-latest, macos-15-intel, macos-latest, ubuntu-latest]
         python-version: ['3.10', '3.11', '3.12', '3.13']
         include:
           - os: windows-latest
             wheelname: win
             cibw_archs: "AMD64"
-          - os: macos-13
+          - os: macos-15-intel
             wheelname: macosx
             cibw_archs: "x86_64"
           - os: macos-latest
@@ -59,7 +59,7 @@ jobs:
         shell: bash -l {0}
         env:
           # Homebrew location is different on Intel Mac
-          LLVM_DIR: ${{ (matrix.os == 'macos-13') && '/usr/local/opt/llvm' || '/opt/homebrew/opt/llvm' }}
+          LLVM_DIR: ${{ (matrix.os == 'macos-15-intel') && '/usr/local/opt/llvm' || '/opt/homebrew/opt/llvm' }}
         run: |
           brew install llvm
           echo CC="${LLVM_DIR}/bin/clang" >> $GITHUB_ENV
