--- a/.github/workflows/test_checkout_one_os.yml
+++ b/.github/workflows/test_checkout_one_os.yml
@@ -36,7 +36,7 @@ jobs:
         3.11
         3.12
         3.13
-      TOX_SKIP_ENV: ${{ inputs.all-python-versions && 'no-match' || '.*?(py311).*?' }}
+      TOX_SKIP_ENV: ${{ inputs.all-python-versions && 'no-match' || '.*?(py311|py312).*?' }}
     steps:
       - uses: actions/checkout@v4
         with:
