Remove all Brille tests from tox run

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 requires = tox>=4
 # The python environments to run the tests in
-envlist = py310,py311,py312,py313,py314,py310-{base,matplotlib,phonopy-reader,brille,all,minrequirements-linux,minrequirements-mac,no-c}
+envlist = py310,py311,py312,py313,py314,py310-{base,matplotlib,phonopy-reader,all,minrequirements-linux,minrequirements-mac,no-c}
 allowlist_externals = git
 
 [testenv]
@@ -24,8 +24,7 @@ extras =
     {[testenv]extras}
     matplotlib
     phonopy-reader
-    brille
-commands = {[testenv]test_command} {posargs}
+commands = {[testenv]test_command} {posargs} -m "not brille"
 
 [testenv:{py313,py314}]
 extras =
@@ -54,22 +53,14 @@ extras =
     phonopy-reader
 commands = {[testenv]test_command} -m "phonopy_reader and not multiple_extras"
 
-# Test with brille extra only
-[testenv:py310-brille]
-extras =
-    {[testenv]extras}
-    brille
-commands = {[testenv]test_command} -m "brille and not multiple_extras"
-
 # Run remaining tests that require multiple extras
 [testenv:py310-all]
 extras =
     {[testenv]extras}
     matplotlib
     phonopy-reader
-    brille
 commands =
-    {[testenv]test_command} -m "multiple_extras"
+    {[testenv]test_command} -m "multiple_extras and not brille"
 
 [testenv:py310-no-c]
 install_command = {[testenv]install_command} -Csetup-args="-Dpython_only=true"
@@ -95,5 +86,4 @@ extras =
     {[testenv]extras}
     matplotlib
     phonopy-reader
-    brille
-commands = {[testenv]test_command} -m "multiple_extras"
+commands = {[testenv]test_command} -m "multiple_extras and not brille"
