pin macos-latest -> macos-14

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -35,7 +35,7 @@ jobs:
           skip: false
           all-python-versions: ${{(github.event_name != 'pull_request')}}
           coverage: false
-        - os: macos-latest
+        - os: macos-14
           skip: false
           all-python-versions: ${{(github.event_name != 'pull_request')}}
           coverage: false
