--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -18,7 +18,7 @@ jobs:
   build-wheels:
     strategy:
       matrix:
-        os: [windows-latest, macos-13, macos-latest, ubuntu-latest]
+        os: [windows-latest, macos-13, macos-14, ubuntu-latest]
         python-version: ['3.10', '3.11', '3.12', '3.13']
         include:
           - os: windows-latest
@@ -27,7 +27,7 @@ jobs:
           - os: macos-13
             wheelname: macosx
             cibw_archs: "x86_64"
-          - os: macos-latest
+          - os: macos-14
             wheelname: macosx
             cibw_archs: "arm64"
           - os: ubuntu-latest
