--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,7 @@ install_command =
         --force-reinstall \
         --upgrade \
         --upgrade-strategy eager \
+        --no-binary brille \
         {opts} \
         {packages}
 extras =
