Pre-build py3.10 brille wheel

--- a/tox.ini
+++ b/tox.ini
@@ -8,13 +8,14 @@ allowlist_externals = git
 package = wheel
 changedir = tests_and_analysis/test
 test_command = python run_tests.py --report
-passenv = CC_LD
+passenv =
+    CC_LD
+    PIP_FIND_LINKS
 install_command =
     python -m pip install -v \
         --force-reinstall \
         --upgrade \
         --upgrade-strategy eager \
-        --no-binary brille \
         {opts} \
         {packages}
 extras =
