--- a/.github/workflows/test_checkout_one_os.yml
+++ b/.github/workflows/test_checkout_one_os.yml
@@ -83,13 +83,22 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install -r tests_and_analysis/ci_requirements.txt
 
-      - name: Try to install brille once - avoid cmake/conan race conditions?
+      - name: Build brille wheel (Windows)
+        if: startsWith( inputs.os , 'windows' )
         shell: bash -l {0}
         run: |
-          python -m pip install brille@git+https://github.com/brille/brille
+          python3.10.exe -m pip wheel -w brille-wheels brille@git+https://github.com/brille/brille
+
+      - name: Build brille wheel (Mac, Linux)
+        if: ${{ !( startsWith( inputs.os , 'windows' )) }}
+        shell: bash -l {0}
+        run: |
+          python3.10 -m pip wheel -w brille-wheels brille@git+https://github.com/brille/brille
 
       - name: Run tests
         shell: bash -l {0}
+        env:
+          PIP_FIND_LINKS: './brille-wheels'
         run: python -m tox run-parallel -- ${{ inputs.coverage && '--cov' || '' }}
 
       - name: Upload test results
