Wheels are useless, pip installs "same version" from PyPI anyway
Let's go back to always-install-from-source and increase verbosity

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,7 +55,7 @@ documentation = "https://euphonic.readthedocs.io/en/stable/"
 matplotlib = ["matplotlib>=3.8.0"]
 phonopy_reader = ["h5py>=3.6.0", "PyYAML>=6.0"]  # Deprecated, will be removed in future versions.
 phonopy-reader = ["h5py>=3.6.0", "PyYAML>=6.0"]
-brille = ["brille"]
+brille = ["brille@git+https://github.com/brille/brille"]
 test = ["mock", "pytest>=8.0,<9.0", "coverage", "pytest-mock", "pytest-lazy-fixtures", "pytest-xvfb", "python-slugify"]
 ci = ["tox==4.23.2"]
 
