Pass more compiler flags

--- a/tox.ini
+++ b/tox.ini
@@ -9,8 +9,10 @@ package = wheel
 changedir = tests_and_analysis/test
 test_command = python run_tests.py --report
 passenv =
+    CC
     CC_LD
-    PIP_FIND_LINKS
+    LDFLAGS
+    CPPFLAGS
 install_command =
     python -m pip install -v \
         --force-reinstall \
