Create BINARY_DIR for windows cmake
This is just to help with Brille source builds, should be removable
when we switch back to wheels.

Build failure looks like it could be this:
https://discourse.cmake.org/t/how-to-deal-with-long-path-names-on-windows-e-g-ftk1011-filetracker-error/12896

--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,7 @@ passenv =
     CC_LD
     LDFLAGS
     CPPFLAGS
+    BINARY_DIR
 install_command =
     python -m pip install -v \
         --force-reinstall \
