--- a/.github/workflows/test_checkout_one_os.yml
+++ b/.github/workflows/test_checkout_one_os.yml
@@ -77,6 +77,11 @@ jobs:
           echo "CC_LD: $CC_LD"
           echo "CC_LD=$CC_LD" >> $GITHUB_ENV
 
+          # FTK1011 error may be related to overly-long paths for brille cmake build
+          # See if this alternative path helps
+          mkdir $HOME/build
+          echo BINARY_DIR="$HOME/build" >> $GITHUB_ENV
+
       - name: Update pip and install dependencies
         shell: bash -l {0}
         run: |
