Tweak tox platform regex syntax
Lots of incorrect environments being selected...

--- a/tox.ini
+++ b/tox.ini
@@ -21,8 +21,7 @@ extras =
 
 # Test with all extras
 [testenv:py{311,312,313,314}]
-platform = linux: linux
-           win: win32
+platform = (linux)|(win32)
 extras =
     {[testenv]extras}
     matplotlib
@@ -31,9 +30,8 @@ extras =
 commands = {[testenv]test_command} {posargs}
 
 # Test with non-brille extras only
-[testenv:py{311,312,313,314}-no-brille]
-platform =
-    mac: darwin
+[testenv:py{311,312,313,314}-mac-no-brille]
+platform = darwin
 extras =
     {[testenv]extras}
     matplotlib
@@ -69,8 +67,7 @@ commands = {[testenv]test_command} -m "brille and not multiple_extras"
 
 # Run remaining tests that require multiple extras
 [testenv:py310-all]
-platform = linux: linux
-           win: win32
+platform = (linux)|(win32)
 extras =
     {[testenv]extras}
     matplotlib
@@ -90,8 +87,7 @@ extras =
 commands = {[testenv]test_command} -m "not c_extension"
 
 [testenv:py310-minrequirements-linux]
-platform =
-    linux: linux
+platform = linux
 set_env =
     linux: PIP_CONSTRAINT={toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
     mac: PIP_CONSTRAINT={toxinidir}/tests_and_analysis/minimum_euphonic_requirements_mac.txt
@@ -106,8 +102,7 @@ extras =
 commands = {[testenv]test_command} -m "multiple_extras"
 
 [testenv:py310-minrequirements-mac]
-platform =
-    mac: darwin
+platform = darwin
 set_env =
     linux: PIP_CONSTRAINT={toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
     mac: PIP_CONSTRAINT={toxinidir}/tests_and_analysis/minimum_euphonic_requirements_mac.txt
