Migrate CI macos-13 to macos-15-intel, drop brille tests on Mac (#426)
* Migrate CI macos-13 to macos-15-intel

* Fix py311|py312 skip regex

  - py312 was *intended* to skip for non-workflow-dispatch test suite. Because it is missing from regex, it would be included if the runner happens to have Python3.12 installed already.

* Overhaul tox env/platforms: no Brille tests on Mac
  - Mac tests are hanging for Brille builds 0.8.1 and 0.8.2. While we troubleshoot that, skip those tests so we can still run CI and develop code.

* Tweak tox platform regex syntax

  - Lots of incorrect environments were being selected, unclear why this is only a problem now

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
-requires = tox>=4
+min_version = 4.0
 # The python environments to run the tests in
-envlist = py310,py311,py312,py313,py314,py310-{base,matplotlib,phonopy-reader,brille,all,minrequirements-linux,minrequirements-mac,no-c}
+envlist = py{311,312,313,314},py{311,312,313,314}-mac-no-brille,py310-{base,brille,matplotlib,phonopy-reader,all,minrequirements-linux,minrequirements-mac,no-c}
 allowlist_externals = git
 
 [testenv]
@@ -19,7 +19,9 @@ install_command =
 extras =
     test
 
-[testenv:{py310,py311,py312}]
+# Test with all extras
+[testenv:py{311,312,313,314}]
+platform = (linux)|(win32)
 extras =
     {[testenv]extras}
     matplotlib
@@ -27,13 +29,14 @@ extras =
     brille
 commands = {[testenv]test_command} {posargs}
 
-[testenv:{py313,py314}]
+# Test with non-brille extras only
+[testenv:py{311,312,313,314}-mac-no-brille]
+platform = darwin
 extras =
     {[testenv]extras}
     matplotlib
     phonopy-reader
 commands = {[testenv]test_command} {posargs} -m "not brille"
-
 
 # Test with no extras
 [testenv:py310-base]
@@ -54,8 +57,9 @@ extras =
     phonopy-reader
 commands = {[testenv]test_command} -m "phonopy_reader and not multiple_extras"
 
-# Test with brille extra only
 [testenv:py310-brille]
+platform = (linux)|(win32)
+
 extras =
     {[testenv]extras}
     brille
@@ -63,6 +67,7 @@ commands = {[testenv]test_command} -m "brille and not multiple_extras"
 
 # Run remaining tests that require multiple extras
 [testenv:py310-all]
+platform = (linux)|(win32)
 extras =
     {[testenv]extras}
     matplotlib
@@ -72,8 +77,8 @@ commands =
     {[testenv]test_command} -m "multiple_extras"
 
 [testenv:py310-no-c]
-install_command = {[testenv]install_command} -Csetup-args="-Dpython_only=true"
 platform = linux
+install_command = {[testenv]install_command} -Csetup-args="-Dpython_only=true"
 extras =
     {[testenv]extras}
     matplotlib
@@ -81,10 +86,8 @@ extras =
     brille
 commands = {[testenv]test_command} -m "not c_extension"
 
-[testenv:py310-minrequirements-{linux,mac}]
-platform =
-    linux: linux
-    mac: darwin
+[testenv:py310-minrequirements-linux]
+platform = linux
 set_env =
     linux: PIP_CONSTRAINT={toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
     mac: PIP_CONSTRAINT={toxinidir}/tests_and_analysis/minimum_euphonic_requirements_mac.txt
@@ -97,3 +100,17 @@ extras =
     phonopy-reader
     brille
 commands = {[testenv]test_command} -m "multiple_extras"
+
+[testenv:py310-minrequirements-mac]
+platform = darwin
+set_env =
+    linux: PIP_CONSTRAINT={toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
+    mac: PIP_CONSTRAINT={toxinidir}/tests_and_analysis/minimum_euphonic_requirements_mac.txt
+deps =
+    numpy==1.24
+    setuptools==60.*
+extras =
+    {[testenv]extras}
+    matplotlib
+    phonopy-reader
+commands = {[testenv]test_command} -m "multiple_extras and not brille"
