Tweak tox config: run mac-brille but as separate test command
This prevents a conflicting OpenMP from brille "contaminating" the
other tests and raising extra warnings.

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 min_version = 4.0
 # The python environments to run the tests in
-envlist = py{311,312,313,314},py{311,312,313,314}-mac-no-brille,py310-{base,brille,matplotlib,phonopy-reader,all,minrequirements-linux,minrequirements-mac,no-c}
+envlist = py{311,312,313,314},py{311,312,313,314}-mac,py310-{base,brille,matplotlib,phonopy-reader,all,minrequirements-linux,minrequirements-mac,no-c}
 allowlist_externals = git
 
 [testenv]
@@ -29,14 +29,14 @@ extras =
     brille
 commands = {[testenv]test_command} {posargs}
 
-# Test with non-brille extras only
-[testenv:py{311,312,313,314}-mac-no-brille]
+# Test brille and non-brille separately
+[testenv:py{311,312,313,314}-mac]
 platform = darwin
-extras =
-    {[testenv]extras}
-    matplotlib
-    phonopy-reader
-commands = {[testenv]test_command} {posargs} -m "not brille"
+extras = {[testenv:py311]extras}
+
+commands =
+    {[testenv]test_command} {posargs} -m "brille"
+    {[testenv]test_command} {posargs} -m "not brille"
 
 # Test with no extras
 [testenv:py310-base]
@@ -113,4 +113,7 @@ extras =
     {[testenv]extras}
     matplotlib
     phonopy-reader
-commands = {[testenv]test_command} -m "multiple_extras and not brille"
+    brille
+commands =
+    {[testenv]test_command} -m "brille"
+    {[testenv]test_command} -m "not brille"
